--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -29,7 +29,7 @@
         <div class="navicon">
             <a href="#"><i class='bx bx-search'></i></a>
             <a href="../html/account.html"><i class='bx bx-user'></i></a>
-            <a href="#"><i class='bx bx-cart'></i></a>
+            <a href="../php/cart.php"><i class='bx bx-cart'></i></a>
 
             <div class="bx bx-menu" id="menu-icon"></div>
         </div>
